# Boffer-bot

./: .dockerignore  .gitignore  CLAUDE.md  Dockerfile  LICENSE.md  README.md  api.py  dockerfile  goog.py  main.py  pyproject.toml  status_message.txt  system_instructions.txt
tests/: test_system_instructions.py
